syntax = "proto3";

option go_package = "raft/protos/vote";

service RequestVote {
    rpc GetVote(RequestVoteDetail) returns (RequestVoteResponse);
}

message RequestVoteDetail {
    int64 term = 1;
    int64 lastLogIndex = 2;
    int64 lastLogTerm = 3;
    string candidateId = 4;
}

message RequestVoteResponse {
    int64 term = 1;
    bool voteGranted = 2;
}